--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ img {
 }
 h1 {
     font-size: 3rem;
-    line-height: 1rem;
+    line-height: 2rem;
     color: rgb(89, 1, 124);
 }
 
@@ -44,6 +44,10 @@ li {
 @media (min-width:992px) {
     body {
         width: 75%;
+    }
+
+    h1 {
+        line-height: 1rem;
     }
     
     img {
