--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ footer {
 
 img {
     width: 100%;
-    padding: 0 0 5% 5%;
+    padding: 5%;
     
 }
 h1 {
@@ -53,6 +53,7 @@ li {
     img {
         float: right;
         width: 40%;
+        padding: 0 0 5% 5%;
     }
 }
 
