--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@ body {
     text-align: justify;
 }
 
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -29,7 +29,7 @@ li a {
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+nav li a:hover:not(.active) {
     background-color: #111;
 }
 
