--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,12 +9,16 @@ body {
     text-align: justify;
 }
 
-nav ul {
-    list-style-type: none;
+nav {
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    opacity: 0.5;
+}
+
+nav ul {
+    list-style-type: none;
 }
 
 li {
