--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,35 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 /*Booking Page Style Starts here*/
-
-
+input, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: rgb(89, 1, 124);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: rgb(117, 0, 163);
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
 /*Booking Page Style Ends here*/
 
 body {
@@ -42,9 +69,6 @@ nav li a:hover:not(.active) {
     background-color: #111;
 }
 
-.active {
-    background-color: #4CAF50;
-}
 
 section {
     margin-bottom: 2rem;
