index styling and navbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,90 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 body {
-    font-family: 'Lato', sans-serif;
-    margin: 0 auto;
-    width: 90%;
-    line-height: 1.75rem;
-    text-align: justify;
+    font-family: "Lato", sans-serif
 }
 
-nav {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    opacity: 0.5;
+.mySlides {
+    display: none
 }
 
-nav ul {
-    list-style-type: none;
-}
-
-li {
-    float: right;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-nav li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #4CAF50;
-}
-
-section {
-    margin-bottom: 2rem;
-}
-
-footer {
-    text-align: center;
-}
-
-img {
-    width: 100%;
-    padding: 5%;
-
-}
-
-h1 {
-    font-size: 3rem;
-    line-height: 2rem;
-    color: rgb(89, 1, 124);
-}
-
-h2 {
-    color: rgb(117, 0, 163);
-}
-
-li {
-    margin-bottom: 1rem;
-}
-
-.byline {
-    font-style: italic;
-    font-size: 90%;
-}
-
-@media (min-width:992px) {
-    body {
-        width: 75%;
-    }
-
-    h1 {
-        line-height: 1rem;
-    }
-
-    img {
-        float: right;
-        width: 40%;
-        padding: 0 0 5% 5%;
-    }
+ul.noBullet{
+    list-style: none;
 }
