--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,10 @@ body {
     font-family: "Lato", sans-serif;
 }
 
+h2 {
+  letter-spacing: 4px;
+}
+
 .w3-bar .w3-button {
     padding: 16px;
 }
@@ -51,10 +55,57 @@ body {
 }
 
 .homeLogo {
-    height: 30px;
+    height: 50px;
 }
 
-.vertAlign {
-    vertical-align: bottom;
+.justify {
+  text-align: justify;
+}
+
+.navLink {
+  padding: 8px 16px;
+  width: auto;
+  border: none;
+  outline: 0;
+  border: none;
+  padding: 8px 16px;
+  overflow: hidden;
+  text-decoration: none;
+  color: rgb(235, 235, 235);
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  padding:12px 24px;
+  transition: color 1s;
+  display: inline-block;
+}
+
+.navLink:hover {
+  color: rgb(160, 146, 68);
+}
+
+.signIn {
+  float: right;
+}
+
+.learnMore {
+  display: inline-block;
+  border: none;
+  padding: 8px 16px;
+  overflow: hidden;
+  text-decoration: none;
+  color: rgb(235, 235, 235);
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  background-color:#000;
+  margin-bottom: 16px;
+  transition: color .5s, background-color .5s;
+}
+
+.learnMore:hover {
+  background-color: rgb(160, 146, 68);
+  color: #000;
 }
 /*General Styling Ends here*/
