--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,6 @@ h2 {
   border: none;
   outline: 0;
   border: none;
-  padding: 8px 16px;
   overflow: hidden;
   text-decoration: none;
   color: rgb(235, 235, 235);
@@ -76,7 +75,7 @@ h2 {
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
-  padding:12px 24px;
+  padding:16px 16px 0px 24px;
   transition: color 1s;
   display: inline-block;
 }
@@ -87,9 +86,11 @@ h2 {
 
 .signIn {
   float: right;
+  line-height: 80px;
+  padding-right: 24px;
 }
 
-.learnMore {
+.basicButton {
   display: inline-block;
   border: none;
   padding: 8px 16px;
@@ -104,8 +105,18 @@ h2 {
   transition: color .5s, background-color .5s;
 }
 
-.learnMore:hover {
+.basicButton:hover {
   background-color: rgb(160, 146, 68);
   color: #000;
+}
+
+.contentBox {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 980px;
+  text-align: center;
+  padding-top: 128px;
+  padding-bottom: 64px;
+
 }
 /*General Styling Ends here*/
