--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,11 @@ input, textarea {
 
 /*General Styling Starts here*/
 body {
-    font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
+}
+
+.transparentNav {
+  background-color: #000;
 }
 
 h2 {
@@ -52,6 +56,9 @@ h2 {
 
 .banner {
     filter: brightness(50%);
+    width: 100%;
+    max-height: 80vh;
+    object-fit: cover;
 }
 
 .homeLogo {
@@ -75,7 +82,7 @@ h2 {
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
-  padding:16px 16px 0px 24px;
+  padding:16px 16px 4px 24px;
   transition: color 1s;
   display: inline-block;
 }
@@ -86,7 +93,7 @@ h2 {
 
 .signIn {
   float: right;
-  line-height: 80px;
+  margin-top: 30px;
   padding-right: 24px;
 }
 
@@ -102,7 +109,7 @@ h2 {
   white-space: nowrap;
   background-color:#000;
   margin-bottom: 16px;
-  transition: color .5s, background-color .5s;
+  transition: color .2s, background-color .2s;
 }
 
 .basicButton:hover {
@@ -110,13 +117,56 @@ h2 {
   color: #000;
 }
 
+
+
+/*Admin Page Styling*/
 .contentBox {
   margin-left: auto;
   margin-right: auto;
   max-width: 980px;
   text-align: center;
-  padding-top: 128px;
   padding-bottom: 64px;
-
 }
-/*General Styling Ends here*/
+
+.adminCategories {
+  border: rgb(189, 189, 189) solid 1px;
+  padding: 24px;
+  width: 40%;
+  display: inline-block;
+  margin: 12px;
+  border-radius: 5px;
+}
+
+.adminCategories:hover {
+  background-color: #ccc;
+}
+
+/* Modal Styling */
+.eventModal {
+  z-index: 3;
+  display: none;
+  padding-top: 100px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color:rgb(0,0,0);
+  background-color:rgba(0,0,0,0.4);
+}
+
+.eventModalContent {
+  margin: auto;
+  background-color:#fff;
+  position: relative;
+  padding: 0;
+  outline: 0;
+  width:600px;
+  animation:animatetop 0.4s;
+}
+
+@keyframes animatetop{
+  from{top:-300px;opacity:0} 
+  to{top:0;opacity:1}
+}
