add links and interactivity

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,7 +117,12 @@ h2 {
   color: #000;
 }
 
-
+/*Calendar Page Styling*/
+#calendar {
+  margin-top: 90px;
+  padding: 24px;
+  text-align: center;
+}
 
 /*Admin Page Styling*/
 .contentBox {
