add footer and engage

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,18 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+.page-content {
+  max-width: 800px;
+}
+
+.top-margin {
+  margin-top: 90px;
+}
+
+.icon {
+  max-width: 30px;
+}
+
 .transparentNav {
   background-color: #000;
 }
@@ -180,3 +192,4 @@ h2 {
     width: 600px;
   }
 }
+
