--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 /* Import font */
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
+
+
 /*Booking Page Styling Starts here*/
 input, textarea {
     width: 100%;
@@ -55,10 +57,13 @@ h2 {
 }
 
 .banner {
+
+    margin-top: 50px;
     filter: brightness(50%);
     width: 100%;
     max-height: 80vh;
     object-fit: cover;
+    
 }
 
 .homeLogo {
